# data-sourcing-test

./: .gitignore  .pre-commit-config.yaml  .sonatype-config  ADF_log.txt  Collateral_links.txt  GGOP.xlsx  PD_UCR_Actual_user_story.txt  README.md  Staging Non-SSF User story.txt  Untitled_Notebook_2025_04_29_16_44_43 (30).csv  Untitled_Notebook_2025_04_29_16_44_43.csv  abnamro_betl_src_poc-0.1.0-py3-none-any.whl  azure-pipelines.yml  descriptive_yaml_log.txt  dial_fair_pd_ucr.csv  differences_comparison.xlsx  distinct_pd_model_version_lastperformingmodel.csv  ihubbe1_dummy_facility.csv  integrated_facility.yml  minimal_yaml_log.txt  pipeline_azuredevops_log.txt  pre_commit_run_all_files_log.txt  pyproject.toml  rel_between_portfolio_names_and_expected_values.csv  requirements.txt  requirements_pre-commit.txt  requirements_test.txt  ruff_errors.txt  setup.cfg  setup.py  sonar-project.properties  sql_query_comparison_with_dial_fair_pd_ucr_actual.csv  sql_query_lastperformingmodelcomparison.sql  ssf_ihubbe1_cpxca.csv  ssf_ihubbe1_cpxcf.csv  ssf_ihubfr1_cp.csv  ssf_{{ DELIVERY_ENTITY }}_cf_sample_dataset.csv  test_collateral_links.txt  tititi.txt  unified_facilities.yml  (+1 more)
business_logic/: BCR_CPTY.yml  How-to-fill-metadata-yaml.md  PPU4_user_story.txt  Untitled_Notebook_2025_03_28_17_33_55.csv  Untitled_Notebook_2025_04_29_16_44_43 (26).csv  Untitled_Notebook_2025_04_29_16_44_43 (58).csv  Untitled_Notebook_2025_04_29_16_44_43 (59).csv  exemption_claim_credit_facility_structure.xlsx  instructions.txt  pd_ucr_actual.yml  pre_commit_log.txt  pull_request_checks.txt  pytest_log.txt  (+2 more)
(+342 files in other folders)
