[metadata]
name = abnamro_betl_src_poc
version = 0.0.0
author = CCC Sourcing
description = PoCs on Sourcing Azure Native
keywords = Databricks, PySpark, Azure Native
url = https://dev.azure.com/cbsp-abnamro/GRD0001018/_git/betl-src-poc

[options]
python_requires = >=3.10
include_package_data = True
package_dir = = src
packages = find:
install_requires =
    requests>=2.23.0

[options.packages.find]
where = src

[options.package_data]
* = *.jscd ..0on, *.ps1, *.py, *.yaml
